# aquarion-libtts

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .readthedocs.yaml  .trivyignore.yaml  .yamlfmt.yaml  CHANGELOG.md  LICENSE  README.md  REUSE.toml  aq  check  config.nu  devbox.json  project-words.txt  pyproject.toml  radish_coverage.toml  sbom.cdx.json  trivy.yaml
.github/workflows/: build.yml  python-package.yml  workflow.yaml
LICENSES/: LicenseRef-Freepik.txt
dev_requirements/: requirements-accept.txt  requirements-hatch-test.py3.13.txt
dev_requirements/accept/: requirements.txt
dev_requirements/hatch-static-analysis/: requirements.txt
dev_requirements/hatch-test.py3.13/: requirements.txt
dev_requirements/hatch-uv/: requirements.txt
dev_requirements/types/: requirements.txt
docs/: .readthedocs.yaml  Makefile  main.py  mkdocs.yml  requirements.in  requirements.txt
docs/javascript/: readthedocs.js
docs/overrides/: main.html
docs/source/: changelog.md  conf.py  contributing.md  getting_started.md  index.md  index.rst  plugins.md
docs/source/acceptance/: api.md  kokoro.md
docs/source/backends/: kokoro.md
docs/source/requirements/: api.md  index.md  kokoro.md
docs2/source/: contributing.md  plugins.md
examples/: kokoro_example.py
features/: interface.feature  kokoro.feature  kokoro_tts.feature  placeholder.feature
scripts/: .hatch_check  .hatch_scripts  check  clean  docs  init  lang  report  sbom  trivy-highest.tpl
src/aquarion/libs/libtts/: __about__.py  __init__.py  _kokoro.py  _utils.py  placeholder.py  py.typed
src/aquarion/libs/libtts/_kokoro/: __init__.py  _backend.py  _hook.py  _plugin.py  _settings.py
src/aquarion/libs/libtts/api/: __init__.py  _i18n.py  _ttsbackend.py  _ttsplugins.py  _ttsregistry.py  _ttssettings.py  _ttsspeechdata.py  ttsbackend.py  ttssettings.py  ttsspeechdata.py
src/aquarion/libs/libtts/kokoro/: __init__.py  _backend.py  _hook.py  _plugin.py  _settings.py  settings.py
src/aquarion/libs/libtts/locale/en/LC_MESSAGES/: aquarion-libtts.po
src/aquarion/libs/libtts/locale/en_CA/LC_MESSAGES/: aquarion-libtts.po
src/aquarion/libs/libtts/locale/fr/LC_MESSAGES/: aquarion-libtts.po
src/aquarion_ai/aquarion_tts/: __init__.py  placeholder.py
src/aquarion_tts/: __about__.py  __init__.py  placeholder.py
steps/: interface_steps.py  kokoro_expected.pcm  kokoro_steps.py  placeholder_steps.py
tests/: __init__.py  conftest.py  kokoro_test.py  placeholder_test.py  utils_test.py
tests/acceptance/features/: api.feature  interface.feature  kokoro.feature
tests/acceptance/steps/: api_steps.py  common_steps.py  interface_steps.py  kokoro_expected.pcm  kokoro_steps.py
tests/api/: i18n_test.py  plugins_test.py  ttsbackend_test.py  ttsplugins_test.py  ttsregistry_test.py  ttssettings_test.py  ttsspeechdata_test.py
tests/api/locale/: test.pot
tests/api/locale/ca_ES/LC_MESSAGES/: test.po
tests/api/locale/fr_CA/LC_MESSAGES/: test.po
tests/api/locale/kk_Cyrl/LC_MESSAGES/: test.po
tests/api/locale/pt/LC_MESSAGES/: test.po
tests/api/locale/sr/LC_MESSAGES/: test.po
tests/api/locale/zh_Hant_TW/LC_MESSAGES/: test.po
tests/kokoro/: backend_test.py  conftest.py  plugin_test.py  settings_test.py
tests/unit/: __init__.py  utils_test.py
tests/unit/api/: __init__.py  i18n_test.py  ttsbackend_test.py  ttsplugins_test.py  ttssettings_test.py
tests/unit/api/locale/ca_ES/LC_MESSAGES/: test.po
tests/unit/api/locale/fr_CA/LC_MESSAGES/: test.po
tests/unit/api/locale/kk_Cyrl/LC_MESSAGES/: test.po
tests/unit/api/locale/pt/LC_MESSAGES/: test.po
tests/unit/api/locale/sr/LC_MESSAGES/: test.po
tests/unit/api/locale/zh_Hant_TW/LC_MESSAGES/: test.po
tests/unit/kokoro/: __init__.py  backend_test.py  conftest.py  hook_test.py  plugin_test.py  settings_test.py
typings/kokoro/: pipeline.pyi
